<resources>
    <string name="app_name">Easy navigation</string>

    <string name="toast_touch_key_tips">话说你得开启按键辅助功能</string>
    <string name="toast_touch_key_scale_tips">看不到了亲… 你还肿么用？</string>
    <string name="toast_touch_key_activate_tips">亲，锁屏功能需要开启设备管理权限</string>

    <!-- custom values-->
    <!-- root_category_title  -->
    <string name="pref_root_category_title_switcher">开关</string>
    <string name="pref_root_category_title_advertisement">广告</string>
    <string name="pref_root_category_title_settings">设置</string>
    <string name="pref_root_category_title_style">样式</string>
    <string name="pref_root_category_title_key">按键</string>
    <string name="pref_root_category_title_extra">图片</string>
    <string name="pref_root_category_title_about">关于</string>

    <!-- category_overlay -->
    <string name="pref_root_category_switcher_overlay_key">category_float_key</string>
    <string name="pref_root_category_switcher_overlay_data">package:com.gogh.floatkey</string>
    <string name="pref_root_category_switcher_overlay_title">悬浮按钮</string>
    <string name="pref_root_category_switcher_overlay_summary_on">我相信你已经看到悬浮按钮了</string>
    <string name="pref_root_category_switcher_overlay_summary_off">使用悬浮按钮需要开启悬浮窗权限</string>

    <!-- category_accesibility -->
    <string name="pref_root_category_accessibility_key">category_accessibility_key</string>
    <string name="pref_root_category_accessibility_title">按键辅助</string>
    <string name="pref_root_category_accessibility_summary_off">按键功能需要开启辅助功能权限</string>
    <string name="pref_root_category_accessibility_summary_on">你可以尽情点击了</string>

    <!-- category_lockscreen -->
    <string name="pref_root_category_lockscreen_key">category_lockscreen_key</string>
    <string name="pref_root_category_lockscreen_title">锁屏功能</string>
    <string name="pref_root_category_lockscreen_summary_off">锁屏功能需要开启设备管理权限</string>
    <string name="pref_root_category_lockscreen_summary_on">OK，锁屏试试</string>
    <string name="pref_root_category_lockscreen_tips">需要在设置中手动关闭</string>
    <string name="pref_root_category_lockscreen_root_key">category_lockscreen_root_key</string>

    <!-- category_settings -->
    <string name="pref_root_category_settings_position_locker">category_settings_position_locker_key</string>
    <string name="pref_root_category_settings_position_title">位置锁定</string>
    <string name="pref_root_category_settings_position_summary">固定在当前位置</string>
    <string name="pref_root_category_settings_position_summary_off">随手指拖动</string>

    <string name="pref_root_category_settings_edge_key">category_settings_auto_edge_key</string>
    <string name="pref_root_category_settings_edge_title">自动贴边</string>
    <string name="pref_root_category_settings_edge_summary">靠近屏幕边缘时贴合在屏幕边缘</string>

    <string name="pref_root_category_settings_sound_key">category_settings_sound_key</string>
    <string name="pref_root_category_settings_sound_title">声音</string>
    <string name="pref_root_category_settings_sound_summary_on">啪啪啪有木有</string>
    <string name="pref_root_category_settings_sound_summary_off">沉默无语</string>

    <string name="pref_root_category_settings_vibrate_key">category_settings_vibrate_key</string>
    <string name="pref_root_category_settings_vibrate_title">震动</string>
    <string name="pref_root_category_settings_vibrate_summary_on">地震模式已开启</string>
    <string name="pref_root_category_settings_vibrate_summary_off">已关闭</string>

    <string name="pref_root_category_settings_ime_key">category_settings_ime_key</string>
    <string name="pref_root_category_settings_ime_title">输入法重置位置</string>
    <string name="pref_root_category_settings_ime_on">在弹出输入法之后重置按钮的位置</string>
    <string name="pref_root_category_settings_ime_off">默认情况下按钮会遮盖输入法</string>

    <string name="pref_root_category_settings_ime_hidden_key">category_settings_ime_hidden_key</string>
    <string name="pref_root_category_settings_ime_hidden_title">输入法覆盖</string>
    <string name="pref_root_category_settings_ime_hidden_on">输入法覆盖按钮</string>
    <string name="pref_root_category_settings_ime_hidden_off">默认情况下按钮会遮盖输入法</string>

    <!-- category_settings -->
    <string name="pref_root_category_style_breath_key">category_style_breath_key</string>
    <string name="pref_root_category_style_breath_title">心跳</string>
    <string name="pref_root_category_style_breath_summary_on">一起深呼吸</string>
    <string name="pref_root_category_style_breath_summary_off">憋气模式</string>

    <string name="pref_root_category_style_rotate_key">category_style_rotate_key</string>
    <string name="pref_root_category_style_rotate_title">旋转</string>
    <string name="pref_root_category_style_rotate_summary_on">根本停不下来</string>
    <string name="pref_root_category_style_rotate_summary_off">等待起飞</string>

    <string name="pref_root_category_style_alpha_key">category_style_alpha_key</string>
    <string name="pref_root_category_style_alpha_title">透明度调节</string>

    <string name="pref_root_category_style_scale_key">category_style_scale_key</string>
    <string name="pref_root_category_style_scale_title">缩放调节</string>

    <string name="pref_root_category_style_auto_alpha_key">category_style_auto_alpha_key</string>
    <string name="pref_root_category_style_auto_alpha_title">潜水状态</string>
    <string name="pref_root_category_style_auto_alpha_summary_on">在无操作3秒后进入半隐身状态</string>
    <string name="pref_root_category_style_auto_alpha_summary_off">还是老样子</string>

    <string name="pref_root_category_style_picture_key">category_style_picture_key</string>
    <string name="pref_root_category_style_picture_title">设置按钮图片</string>

    <!-- 按键设置 -->
    <string name="pref_root_category_settings_gesture_key">category_settings_gesture_key</string>
    <string name="pref_root_category_settings_gesture_title">按键与手势</string>
    <string name="pref_root_category_settings_gesture_summary">设置手势操控下的响应事件</string>

    <!--关于-->
    <string name="action_share_to">分享到</string>
    <string name="settting_prefrences_about_share_key">about_share</string>
    <string name="settting_prefrences_about_share_title">推荐给朋友</string>
    <string name="settting_prefrences_about_share_summary">好东西一定要分享哦</string>

    <string name="settting_prefrences_about_version_title">版本信息</string>
    <string name="settting_prefrences_about_version_code">当前版本：1.4.6.0929\n系统按键替代解决方案，并提供扩展按键</string>

    <string name="settting_prefrences_about_author_title">关于作者</string>
    <string name="settting_prefrences_about_author_summary">http://www.xiaofeng.site</string>

    <!--按键手势-->
    <string name="pref_gesture_category_touckkey">按键</string>
    <string name="pref_gesture_category_gesture">手势</string>
    <string name="pref_gesture_category_dialog_title">功能选择</string>

    <string name="pref_gesture_category_single_click_key">gesture_single_click_key</string>
    <string name="pref_gesture_category_single_click_title">单击</string>
    <string name="pref_gesture_category_single_click_summary">返回上一级</string>
    <string name="pref_gesture_category_single_click_default_value">1</string>

    <string name="pref_gesture_category_double_click_key">gesture_double_click_key</string>
    <string name="pref_gesture_category_double_click_title">双击</string>
    <string name="pref_gesture_category_double_click_summary">返回主页</string>
    <string name="pref_gesture_category_double_click_default_value">2</string>

    <string name="pref_gesture_category_swipe_left_key">gesture_swipe_left_key</string>
    <string name="pref_gesture_category_swipe_left_title">左滑</string>
    <string name="pref_gesture_category_swipe_left_summary">关闭当前应用</string>
    <string name="pref_gesture_category_swipe_left_default_value">11</string>

    <string name="pref_gesture_category_swipe_up_key">gesture_swipe_up_key</string>
    <string name="pref_gesture_category_swipe_up_title">上滑</string>
    <string name="pref_gesture_category_swipe_up_summary">最近任务</string>
    <string name="pref_gesture_category_swipe_up_default_value">5</string>

    <string name="pref_gesture_category_swipe_right_key">gesture_swipe_right_key</string>
    <string name="pref_gesture_category_double_right_title">右滑</string>
    <string name="pref_gesture_category_double_right_summary">切换至上一个应用</string>
    <string name="pref_gesture_category_double_right_default_value">6</string>

    <string name="pref_gesture_category_swipe_down_key">gesture_swipe_down_key</string>
    <string name="pref_gesture_category_swipe_down_title">下滑</string>
    <string name="pref_gesture_category_swipe_down_summary">下拉通知栏</string>
    <string name="pref_gesture_category_swipe_down_default_value">4</string>

    <!--capture-->
    <string name="capture_layout_type_free">自由选取</string>
    <string name="capture_layout_type_full">截取全屏</string>
    <string name="capture_layout_type_rectangle">矩形选取</string>
    <string name="screen_capture_fail">抱歉，截屏失败</string>

</resources>
